results/SVCOMP/4-shot/log-ExSymExeFNEG-2024_03_18_20_41_33.txt
class Main {

  //@ requires x >= 0;
  //@ ensures \result <==> test(x);
  public static boolean f(float x) {
    Main inst = new Main();
    if (x >= 0)
      return inst.test(x);
    return true;
  }

  //@ requires true;
  //@ ensures \result <==> (y <= 0);
  public boolean test(float x) {
    System.out.println("Testing FNEG");
    float y = -x;
    if (y > 0) {
      return false;
    } else
      System.out.println("branch -x <= 0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeFNEG.java:4: error: non-static method test(float) cannot be referenced from a static context
  //@ ensures \result <==> test(x);
                           ^
/home/max/Documents/JMLGPT/tmp/ExSymExeFNEG.java:13: error: cannot find symbol
  //@ ensures \result <==> (y <= 0);
                            ^
  symbol:   variable y
  location: class Main
2 errors

